# ootb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plugin/config/: RolandJV880.def.xml  definition.xml  definition.xslt  test--def.xml
plugin/source/: CMakeLists.txt  MidiParameters.cpp  MidiParameters.h  MidiStructure.h  ParameterTransformation.cpp  ParameterTransformation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SysexMidiInputCallback.cpp  SysexMidiInputCallback.h
